update readme and daily cloud run

--- a/readme.ipynb
+++ b/readme.ipynb
@@ -42,8 +42,13 @@
     "* `model_training_run.ipynb` trains a model.\n",
     "* `update_data_run.py` should run at the beginning of each day, fetching the previous date's matchup and updating all the data.\n",
     "* `fetch_today_matchup_and_odds_run.py` should run at the beginning of each day, this creates matchup for today's live bet and fetches the odds for today's games.\n",
-    "* add this line `0 8 * * * /home/junlim/projects/mlb-props/daily_run.sh` to crontab to run it every 8am daily.\n",
-    "* add this line `0 10 * * * /home/junlim/projects/mlb-props/daily_live_run.sh` to crontab to run it every 10am daily.\n"
+    "\n",
+    "```\n",
+    "$ crontab -l\n",
+    "0 12-20 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/daily_odds_update_run.sh\n",
+    "0 12 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/daily_cloud_run.sh\n",
+    "0 14 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/daily_cloud_live_run.sh\n",
+    "```"
    ]
   },
   {
@@ -56,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dcc39163-0d1e-4b71-a597-1fca1bbc2d0c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-08T23:30:30.709786Z",
-     "iopub.status.busy": "2023-06-08T23:30:30.708692Z",
-     "iopub.status.idle": "2023-06-08T23:30:32.611840Z",
-     "shell.execute_reply": "2023-06-08T23:30:32.611139Z",
-     "shell.execute_reply.started": "2023-06-08T23:30:30.709671Z"
+     "iopub.execute_input": "2023-07-23T02:37:21.287340Z",
+     "iopub.status.busy": "2023-07-23T02:37:21.287023Z",
+     "iopub.status.idle": "2023-07-23T02:37:23.200073Z",
+     "shell.execute_reply": "2023-07-23T02:37:23.198906Z",
+     "shell.execute_reply.started": "2023-07-23T02:37:21.287314Z"
     }
    },
    "outputs": [],
@@ -80,35 +85,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "a1b47feb-1280-4715-b482-48e201721de9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-09T00:06:48.456323Z",
-     "iopub.status.busy": "2023-06-09T00:06:48.456049Z",
-     "iopub.status.idle": "2023-06-09T00:06:48.923740Z",
-     "shell.execute_reply": "2023-06-09T00:06:48.922990Z",
-     "shell.execute_reply.started": "2023-06-09T00:06:48.456303Z"
+     "iopub.execute_input": "2023-07-23T02:37:46.927933Z",
+     "iopub.status.busy": "2023-07-23T02:37:46.926398Z",
+     "iopub.status.idle": "2023-07-23T02:37:47.554171Z",
+     "shell.execute_reply": "2023-07-23T02:37:47.553032Z",
+     "shell.execute_reply.started": "2023-07-23T02:37:46.927858Z"
     }
    },
    "outputs": [],
    "source": [
     "collect_data_Base_dir = 'collect_data'\n",
     "df_game_matchup_total = pd.read_pickle(f'{collect_data_Base_dir}/df_game_matchup_total.pkl')\n",
-    "test_data = df_game_matchup_total[(df_game_matchup_total.game_date > \"2022-12-01\")][model.common.features]"
+    "test_data = df_game_matchup_total[(df_game_matchup_total.game_date > \"2022-12-01\")][model.common.features_1hits_recorded]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "86b69cdb-8c27-413d-a4a3-efcbc655d348",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-09T00:00:21.995948Z",
-     "iopub.status.busy": "2023-06-09T00:00:21.995466Z",
-     "iopub.status.idle": "2023-06-09T00:00:22.093388Z",
-     "shell.execute_reply": "2023-06-09T00:00:22.092325Z",
-     "shell.execute_reply.started": "2023-06-09T00:00:21.995911Z"
+     "iopub.execute_input": "2023-07-23T02:37:57.838398Z",
+     "iopub.status.busy": "2023-07-23T02:37:57.838013Z",
+     "iopub.status.idle": "2023-07-23T02:37:57.904532Z",
+     "shell.execute_reply": "2023-07-23T02:37:57.903036Z",
+     "shell.execute_reply.started": "2023-07-23T02:37:57.838373Z"
     }
    },
    "outputs": [
@@ -121,20 +126,20 @@
     }
    ],
    "source": [
-    "regression_model = pycaret.classification.load_model(model.common.model_file_name)"
+    "regression_model = pycaret.classification.load_model(model.common.model_1hits_file_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "1c44068e-4401-4f38-81eb-a13521f8ed92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-09T00:00:22.677091Z",
-     "iopub.status.busy": "2023-06-09T00:00:22.676302Z",
-     "iopub.status.idle": "2023-06-09T00:00:23.191430Z",
-     "shell.execute_reply": "2023-06-09T00:00:23.189575Z",
-     "shell.execute_reply.started": "2023-06-09T00:00:22.677035Z"
+     "iopub.execute_input": "2023-07-23T02:37:59.707034Z",
+     "iopub.status.busy": "2023-07-23T02:37:59.706546Z",
+     "iopub.status.idle": "2023-07-23T02:38:00.032406Z",
+     "shell.execute_reply": "2023-07-23T02:38:00.031680Z",
+     "shell.execute_reply.started": "2023-07-23T02:37:59.706998Z"
     }
    },
    "outputs": [],
@@ -146,37 +151,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "40ce226e-f2be-413d-aff5-ec467840983f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-09T00:00:23.193599Z",
-     "iopub.status.busy": "2023-06-09T00:00:23.193383Z",
-     "iopub.status.idle": "2023-06-09T00:00:23.199654Z",
-     "shell.execute_reply": "2023-06-09T00:00:23.198337Z",
-     "shell.execute_reply.started": "2023-06-09T00:00:23.193583Z"
+     "iopub.execute_input": "2023-07-23T02:38:24.486352Z",
+     "iopub.status.busy": "2023-07-23T02:38:24.485531Z",
+     "iopub.status.idle": "2023-07-23T02:38:24.493580Z",
+     "shell.execute_reply": "2023-07-23T02:38:24.491379Z",
+     "shell.execute_reply.started": "2023-07-23T02:38:24.486294Z"
     }
    },
    "outputs": [],
    "source": [
     "def get_eval_profile(df_prediction, score_threshold):\n",
     "    confident_prediction = df_prediction[(df_prediction[\"prediction_score\"] >= score_threshold) & (df_prediction[\"prediction_label\"] == 1)].sort_values(by = \"prediction_score\", ascending = False).drop_duplicates(\"batting_name\")\n",
-    "    confident_prediction[['game_date', \"batting_name\", \"batting_hit_recorded\",\t\"prediction_score\", \"player_team_name\", \"theo_odds\"]]\n",
+    "    confident_prediction[['game_date', \"batting_name\", \"batting_1hits_recorded\",\t\"prediction_score\", \"player_team_name\", \"theo_odds\"]]\n",
     "    l =len(confident_prediction)\n",
-    "    return l, confident_prediction.batting_hit_recorded.sum() / l"
+    "    return l, confident_prediction.batting_1hits_recorded.sum() / l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "4dcac691-9225-4742-85b9-3ae831083d68",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-09T00:00:23.649319Z",
-     "iopub.status.busy": "2023-06-09T00:00:23.648536Z",
-     "iopub.status.idle": "2023-06-09T00:00:23.678899Z",
-     "shell.execute_reply": "2023-06-09T00:00:23.677354Z",
-     "shell.execute_reply.started": "2023-06-09T00:00:23.649286Z"
+     "iopub.execute_input": "2023-07-23T02:38:13.835249Z",
+     "iopub.status.busy": "2023-07-23T02:38:13.834995Z",
+     "iopub.status.idle": "2023-07-23T02:38:13.856624Z",
+     "shell.execute_reply": "2023-07-23T02:38:13.856159Z",
+     "shell.execute_reply.started": "2023-07-23T02:38:13.835231Z"
     }
    },
    "outputs": [
@@ -203,7 +208,7 @@
        "      <th></th>\n",
        "      <th>game_date</th>\n",
        "      <th>batting_name</th>\n",
-       "      <th>batting_hit_recorded</th>\n",
+       "      <th>batting_1hits_recorded</th>\n",
        "      <th>prediction_score</th>\n",
        "      <th>player_team_name</th>\n",
        "      <th>theo_odds</th>\n",
@@ -211,49 +216,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>23933</th>\n",
-       "      <td>2023-05-25</td>\n",
-       "      <td>Randal Grichuk</td>\n",
+       "      <th>1276</th>\n",
+       "      <td>2023-04-03</td>\n",
+       "      <td>Paul Goldschmidt</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.91</td>\n",
-       "      <td>Colorado Rockies</td>\n",
-       "      <td>-1011</td>\n",
+       "      <td>0.9856</td>\n",
+       "      <td>Arizona Diamondbacks</td>\n",
+       "      <td>-6844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16151</th>\n",
-       "      <td>2023-05-07</td>\n",
-       "      <td>Freddie Freeman</td>\n",
+       "      <th>1085</th>\n",
+       "      <td>2023-04-03</td>\n",
+       "      <td>Dansby Swanson</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.90</td>\n",
+       "      <td>0.9799</td>\n",
        "      <td>Atlanta Braves</td>\n",
-       "      <td>-900</td>\n",
+       "      <td>-4875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7494</th>\n",
-       "      <td>2023-04-17</td>\n",
-       "      <td>Shohei Ohtani</td>\n",
+       "      <th>705</th>\n",
+       "      <td>2023-04-02</td>\n",
+       "      <td>Willson Contreras</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>Los Angeles Angels</td>\n",
-       "      <td>-733</td>\n",
+       "      <td>0.9774</td>\n",
+       "      <td>Chicago Cubs</td>\n",
+       "      <td>-4325</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9918</th>\n",
-       "      <td>2023-04-22</td>\n",
+       "      <th>235</th>\n",
+       "      <td>2023-04-01</td>\n",
        "      <td>Rafael Devers</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.88</td>\n",
+       "      <td>0.9760</td>\n",
        "      <td>Boston Red Sox</td>\n",
-       "      <td>-733</td>\n",
+       "      <td>-4067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25906</th>\n",
-       "      <td>2023-06-03</td>\n",
-       "      <td>Nico Hoerner</td>\n",
+       "      <th>790</th>\n",
+       "      <td>2023-04-02</td>\n",
+       "      <td>Taylor Ward</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>Chicago Cubs</td>\n",
-       "      <td>-733</td>\n",
+       "      <td>0.9728</td>\n",
+       "      <td>Los Angeles Angels</td>\n",
+       "      <td>-3576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -265,86 +270,86 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22095</th>\n",
-       "      <td>2023-05-23</td>\n",
-       "      <td>Anthony Santander</td>\n",
+       "      <th>9965</th>\n",
+       "      <td>2023-04-22</td>\n",
+       "      <td>Teoscar Hernandez</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>Baltimore Orioles</td>\n",
-       "      <td>-300</td>\n",
+       "      <td>0.7524</td>\n",
+       "      <td>Seattle Mariners</td>\n",
+       "      <td>-304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17950</th>\n",
-       "      <td>2023-05-12</td>\n",
-       "      <td>Marcus Semien</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>Oakland Athletics</td>\n",
-       "      <td>-300</td>\n",
+       "      <th>25214</th>\n",
+       "      <td>2023-05-31</td>\n",
+       "      <td>Ildemaro Vargas</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.7522</td>\n",
+       "      <td>Arizona Diamondbacks</td>\n",
+       "      <td>-304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15338</th>\n",
-       "      <td>2023-05-06</td>\n",
-       "      <td>C.J. Cron</td>\n",
+       "      <th>9631</th>\n",
+       "      <td>2023-04-22</td>\n",
+       "      <td>Josh Bell</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>Colorado Rockies</td>\n",
-       "      <td>-300</td>\n",
+       "      <td>0.7520</td>\n",
+       "      <td>Cleveland Guardians</td>\n",
+       "      <td>-303</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11867</th>\n",
-       "      <td>2023-04-27</td>\n",
-       "      <td>Trey Mancini</td>\n",
+       "      <th>1832</th>\n",
+       "      <td>2023-04-04</td>\n",
+       "      <td>Eddie Rosario</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>Chicago Cubs</td>\n",
-       "      <td>-300</td>\n",
+       "      <td>0.7506</td>\n",
+       "      <td>Minnesota Twins</td>\n",
+       "      <td>-301</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11901</th>\n",
-       "      <td>2023-04-27</td>\n",
-       "      <td>Xander Bogaerts</td>\n",
+       "      <th>9734</th>\n",
+       "      <td>2023-04-22</td>\n",
+       "      <td>Ke'Bryan Hayes</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>San Diego Padres</td>\n",
-       "      <td>-300</td>\n",
+       "      <td>0.7506</td>\n",
+       "      <td>Pittsburgh Pirates</td>\n",
+       "      <td>-301</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>61 rows × 6 columns</p>\n",
+       "<p>262 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       game_date       batting_name  batting_hit_recorded  prediction_score  \\\n",
-       "23933 2023-05-25     Randal Grichuk                     1              0.91   \n",
-       "16151 2023-05-07    Freddie Freeman                     1              0.90   \n",
-       "7494  2023-04-17      Shohei Ohtani                     1              0.88   \n",
-       "9918  2023-04-22      Rafael Devers                     1              0.88   \n",
-       "25906 2023-06-03       Nico Hoerner                     1              0.88   \n",
-       "...          ...                ...                   ...               ...   \n",
-       "22095 2023-05-23  Anthony Santander                     1              0.75   \n",
-       "17950 2023-05-12      Marcus Semien                     1              0.75   \n",
-       "15338 2023-05-06          C.J. Cron                     1              0.75   \n",
-       "11867 2023-04-27       Trey Mancini                     1              0.75   \n",
-       "11901 2023-04-27    Xander Bogaerts                     1              0.75   \n",
+       "       game_date       batting_name  batting_1hits_recorded  prediction_score  \\\n",
+       "1276  2023-04-03   Paul Goldschmidt                       1            0.9856   \n",
+       "1085  2023-04-03     Dansby Swanson                       1            0.9799   \n",
+       "705   2023-04-02  Willson Contreras                       1            0.9774   \n",
+       "235   2023-04-01      Rafael Devers                       1            0.9760   \n",
+       "790   2023-04-02        Taylor Ward                       1            0.9728   \n",
+       "...          ...                ...                     ...               ...   \n",
+       "9965  2023-04-22  Teoscar Hernandez                       1            0.7524   \n",
+       "25214 2023-05-31    Ildemaro Vargas                       0            0.7522   \n",
+       "9631  2023-04-22          Josh Bell                       1            0.7520   \n",
+       "1832  2023-04-04      Eddie Rosario                       1            0.7506   \n",
+       "9734  2023-04-22     Ke'Bryan Hayes                       1            0.7506   \n",
        "\n",
-       "         player_team_name  theo_odds  \n",
-       "23933    Colorado Rockies      -1011  \n",
-       "16151      Atlanta Braves       -900  \n",
-       "7494   Los Angeles Angels       -733  \n",
-       "9918       Boston Red Sox       -733  \n",
-       "25906        Chicago Cubs       -733  \n",
-       "...                   ...        ...  \n",
-       "22095   Baltimore Orioles       -300  \n",
-       "17950   Oakland Athletics       -300  \n",
-       "15338    Colorado Rockies       -300  \n",
-       "11867        Chicago Cubs       -300  \n",
-       "11901    San Diego Padres       -300  \n",
+       "           player_team_name  theo_odds  \n",
+       "1276   Arizona Diamondbacks      -6844  \n",
+       "1085         Atlanta Braves      -4875  \n",
+       "705            Chicago Cubs      -4325  \n",
+       "235          Boston Red Sox      -4067  \n",
+       "790      Los Angeles Angels      -3576  \n",
+       "...                     ...        ...  \n",
+       "9965       Seattle Mariners       -304  \n",
+       "25214  Arizona Diamondbacks       -304  \n",
+       "9631    Cleveland Guardians       -303  \n",
+       "1832        Minnesota Twins       -301  \n",
+       "9734     Pittsburgh Pirates       -301  \n",
        "\n",
-       "[61 rows x 6 columns]"
+       "[262 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +357,7 @@
    "source": [
     "score_threshold = 0.75\n",
     "confident_test_prediction = test_prediction[(test_prediction[\"prediction_score\"] >= score_threshold) & (test_prediction[\"prediction_label\"] == 1)].sort_values(by = \"prediction_score\", ascending = False).drop_duplicates(\"batting_name\")\n",
-    "confident_test_prediction[['game_date', \"batting_name\", \"batting_hit_recorded\",\t\"prediction_score\", \"player_team_name\", \"theo_odds\"]]"
+    "confident_test_prediction[['game_date', \"batting_name\", \"batting_1hits_recorded\",\t\"prediction_score\", \"player_team_name\", \"theo_odds\"]]"
    ]
   },
   {
@@ -365,15 +370,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "5d5298df-43ff-41c2-9144-d480d76118d6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-09T00:00:24.795294Z",
-     "iopub.status.busy": "2023-06-09T00:00:24.794798Z",
-     "iopub.status.idle": "2023-06-09T00:00:24.833164Z",
-     "shell.execute_reply": "2023-06-09T00:00:24.832011Z",
-     "shell.execute_reply.started": "2023-06-09T00:00:24.795268Z"
+     "iopub.execute_input": "2023-07-23T02:38:26.060208Z",
+     "iopub.status.busy": "2023-07-23T02:38:26.059971Z",
+     "iopub.status.idle": "2023-07-23T02:38:26.095985Z",
+     "shell.execute_reply": "2023-07-23T02:38:26.095298Z",
+     "shell.execute_reply.started": "2023-07-23T02:38:26.060192Z"
     }
    },
    "outputs": [
@@ -381,11 +386,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(215, 0.6744186046511628)\n",
-      "(105, 0.7238095238095238)\n",
-      "(61, 0.8360655737704918)\n",
-      "(29, 0.9655172413793104)\n",
-      "(10, 1.0)\n"
+      "(404, 0.8564356435643564)\n",
+      "(325, 0.8738461538461538)\n",
+      "(262, 0.8931297709923665)\n",
+      "(174, 0.896551724137931)\n",
+      "(104, 0.9230769230769231)\n"
      ]
     }
    ],
