--- a/readme.ipynb
+++ b/readme.ipynb
@@ -46,6 +46,7 @@
     "```\n",
     "$ crontab -l\n",
     "0 12-20 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/scripts/daily_cloud_live_update_run.sh\n",
+    "0 12-20 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/scripts/telegram_notify_new_prediction.sh\n",
     "0 12 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/scripts/daily_cloud_run.sh\n",
     "0 14 * * * TZ=US/Eastern /home/sculd3/projects/mlb-props/scripts/daily_cloud_live_run.sh\n",
     "```"
